use Arrays.asList for jdk8